--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hi im Kyle!</h1>
     <h1>Hi I'm Luke</h1>
     <h1> Doooooood<h1>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
