--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+
+    </div>
     <h1>Hi im Kyle!</h1>
     <h1>Hi I'm Luke</h1>
     <h1> Doooooood<h1>
